--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 body {
     font-family: "Roboto", sans-serif;
     color: #434455;
-    background-color: #FFFFFF;
+    background-color: #ffffff;
 }
 
 ol, ul {
