--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,21 @@ ol, ul {
 a {
     text-decoration: none;
 }
+h2 {    
+        font-weight: 700;
+        font-size: 36px;
+        line-height: 1.11;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;
+}
+h3 {    
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+}
 /* header */
 .logo {
     font-family: "Raleway", sans-serif;
@@ -58,6 +73,7 @@ a {
 }
 
 /* main */
+/* section one */
 .main {
     background-color: #2e2f42;
 }
@@ -84,6 +100,14 @@ a {
 .order-btn:focus {
     background-color: #404BBF;
     cursor: pointer;
+}
+/* section two */
+.text-values {    
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #434455;
 }
 
 
