--- a/css/styles.css
+++ b/css/styles.css
@@ -157,6 +157,13 @@ a {
         text-align: center;
         color: #2e2f42;
 }
+.value-title {    
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 1.2;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+}
 
 
 
