--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,7 @@ a {
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        text-transform: capitalize;
 }
 .secondary-title {    
         font-weight: 700;
@@ -159,6 +160,7 @@ a {
         letter-spacing: 0.02em;
         text-align: center;
         color: #2e2f42;
+        text-transform: capitalize;
 }
 .value-title {    
         font-weight: 500;
