--- a/css/styles.css
+++ b/css/styles.css
@@ -176,3 +176,10 @@ a {
 .page-footer {
     background-color: #2e2f42;;
 }
+.text-footer {    
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #f4f4fd;
+}
